# DeepstreamDemo

./: .gitignore  README.md
components/01_qt_eglimage_zerocopy/: CMakeLists.txt  README.md
components/01_qt_eglimage_zerocopy/docker/: Dockerfile
components/01_qt_eglimage_zerocopy/scripts/: build_in_container.sh  run_in_container.sh  run_rtsp.sh  run_videotestsrc.sh
components/01_qt_eglimage_zerocopy/src/: GstPipeline.cpp  GstPipeline.hpp  VideoGLWidget.cpp  VideoGLWidget.hpp  main.cpp
components/02_nvurisrcbin_reconnect/: CMakeLists.txt  README.md
components/02_nvurisrcbin_reconnect/docker/: Dockerfile
components/02_nvurisrcbin_reconnect/scripts/: build_in_container.sh  run_in_container.sh  run_local.sh  soak.sh
components/02_nvurisrcbin_reconnect/src/: RtspSource.hpp  main.cpp
components/03_latency_probe/: CMakeLists.txt  README.md
components/03_latency_probe/docker/: Dockerfile
components/03_latency_probe/scripts/: build_in_container.sh  parse_probe_csv.py  run_in_container.sh  soak.sh
components/03_latency_probe/src/: LatencyAggregator.cpp  LatencyAggregator.hpp  ProbeGLWidget.cpp  ProbeGLWidget.hpp  ProbeSource.cpp  ProbeSource.hpp  main.cpp
components/04_multi_rtsp_widgets/: CMakeLists.txt  README.md
components/04_multi_rtsp_widgets/docker/: Dockerfile
components/04_multi_rtsp_widgets/scripts/: build_in_container.sh  run_in_container.sh  soak.sh
components/04_multi_rtsp_widgets/src/: VideoGLWidget.cpp  main.cpp
components/05_selective_yolo_infer/: .gitignore  CMakeLists.txt  README.md
components/05_selective_yolo_infer/configs/: config_infer_primary_trafficcamnet.txt  config_infer_primary_yolov10.txt  config_infer_primary_yolov8.txt
components/05_selective_yolo_infer/docker/: Dockerfile
components/05_selective_yolo_infer/scripts/: build_in_container.sh  fetch_models.sh  run_in_container.sh  soak.sh
components/05_selective_yolo_infer/src/: RtspInferSource.cpp  RtspInferSource.hpp  VideoGLWidget.cpp  VideoGLWidget.hpp  main.cpp
components/06_dual_4k_stitch_restream/: CMakeLists.txt  README.md
components/06_dual_4k_stitch_restream/configs/: identity_pair.json
components/06_dual_4k_stitch_restream/docker/: Dockerfile
components/06_dual_4k_stitch_restream/scripts/: build_in_container.sh  run_in_container.sh  soak.sh
components/06_dual_4k_stitch_restream/src/: RtspSource.cpp  StitchCuda.cu  StitchCuda.hpp  StitchFrame.hpp  StitchRenderer.hpp  StitchRestreamSession.cpp  StitchRestreamSession.hpp  VideoGLWidget.cpp  VideoGLWidget.hpp  main.cpp
components/07_full_pressure_integration/: .gitignore  CMakeLists.txt  README.md
components/07_full_pressure_integration/configs/: pair_calibration_example.json  sources.default.json
components/07_full_pressure_integration/docker/: Dockerfile
components/07_full_pressure_integration/scripts/: build_in_container.sh  fetch_models.sh  overnight_soak.sh  run_in_container.sh  soak.sh
components/07_full_pressure_integration/src/: DualRtspSourcePair.cpp  DualRtspSourcePair.hpp  FrameHolder.hpp  RtspInferSource.cpp  RtspInferSource.hpp  RtspSource.hpp  StitchFrame.cpp  StitchGLWidget.cpp  StitchGLWidget.hpp  StitchRenderer.cpp  VideoGLWidget.cpp  main.cpp
docs/: architecture.md  component-template.md
docs/debug/: 001 - qt-openglwidget-blackscreen-on-xcb-egl.md  002 - dgpu-gpu-only-display-pivot.md  003 - p03-videotestsrc-late-run-degradation.md  004 - p05-deepstream-entrypoint-eats-sigterm.md  005 - p05-trt-engine-not-persisted.md  006 - p06-repeated-stitch-backlog-exhausts-device-surfaces.md  007 - p06-nvrtspoutsinkbin-503-switch-to-rtspclientsink.md  008 - p06-calibrated-kernel-needs-sm120-real.md  009 - p06-soak-timeout-left-container-running.md
